--- a/DeskApi/appsettings.json
+++ b/DeskApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SqlExpress; Database=Desk-API; Trusted_Connection=true; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
